--- a/instance_2_ne014/docker-compose-dev.yml
+++ b/instance_2_ne014/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - sdb_db_data:/var/lib/postgresql/data
     ports:
-      - 5432:5432
+      - 5434:5434
 
   sdb_science_db_graphql_server:
     depends_on:
@@ -17,9 +17,10 @@ services:
       context: ./graphql-server
       dockerfile: Dockerfile.graphql_server
     ports:
-      - 3000:3000
+      - 3002:3002
     environment:
-      - PORT=3000
+      - PORT=3002
+      - REQUIRE_SIGN_IN="false"
     volumes:
       - .:/usr/ScienceDbStarterPack
       # Use the Sequelize config adjusted for the Docker setup of ScienceDbStarterPack:
